# function_traits

./: .gitignore  Makefile  README.md
inc/: function_traits.hpp
test/: CMakeLists.txt  Makefile  common.cmake
test/build_by_cpp11/: CMakeLists.txt
test/build_by_cpp14/: CMakeLists.txt
test/build_by_cpp17/: CMakeLists.txt
test/src/: test_function_tratis.cpp
